--- a/about.html
+++ b/about.html
@@ -95,30 +95,32 @@
         </div>
     </nav>
 
-    <div class="body-text">
-        <div class="title">Krav:</div>
+    <section>
+        <div class="body-text">
+            <div class="title">Krav:</div>
 
-        <div style="font-size: medium;">
-            <li>It is a smaller cinema with 2 movie theatres.</li>
-            <li>They are showing different categories of movies e.g., Horror, Romance, Action, Science Fiction, etc.</li>
-            <li>There are different age limits for the individual movies.</li>
-            <li>There are 20 rows with 12 numbered seats per row in the smallest theatre.</li>
-            <li>There are 25 rows with 16 numbered seats per row in the largest theatre.</li>
-            <li>At the moment, all reservations of tickets are done by phone.</li>
-            <li>What to show, and in which theatre is planned 3 months in advance.</li>
-            <li>Sometimes extra shows are done.</li>
-            <li>If a movie is doing poorly, it is taken off the program before time.</li>
+            <div style="font-size: medium;">
+                <li>It is a smaller cinema with 2 movie theatres.</li>
+                <li>They are showing different categories of movies e.g., Horror, Romance, Action, Science Fiction, etc.</li>
+                <li>There are different age limits for the individual movies.</li>
+                <li>There are 20 rows with 12 numbered seats per row in the smallest theatre.</li>
+                <li>There are 25 rows with 16 numbered seats per row in the largest theatre.</li>
+                <li>At the moment, all reservations of tickets are done by phone.</li>
+                <li>What to show, and in which theatre is planned 3 months in advance.</li>
+                <li>Sometimes extra shows are done.</li>
+                <li>If a movie is doing poorly, it is taken off the program before time.</li>
+            </div>
+
+            <div class="title" style="padding: 2vh;">Employees:</div>
+
+            <div style="font-size: medium;">
+                <li>2 employees handle the reservations and the sale of tickets, they also manage the sale of popcorn, candy, soda, etc.</li>
+                <li>1 movie operator</li>
+                <li>1 employee to inspect the tickets and handle the cleaning</li>
+            </div>
+
         </div>
-
-        <div class="title" style="padding: 2vh;">Employees:</div>
-
-        <div style="font-size: medium;">
-            <li>2 employees handle the reservations and the sale of tickets, they also manage the sale of popcorn, candy, soda, etc.</li>
-            <li>1 movie operator</li>
-            <li>1 employee to inspect the tickets and handle the cleaning</li>
-        </div>
-
-    </div>
+    </section>
 
     <!-- Include Font Awesome for icons -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
