--- a/index.html
+++ b/index.html
@@ -108,14 +108,7 @@
                     <h1 style="color: #fff;">Popular Movies</h1>
                 </div>
                 <div class="flexbox-content">
-                    <div class="flexbox-item flexbox-item-1">Item 1</div>
-                    <div class="flexbox-item flexbox-item-2">Item 2</div>
-                    <div class="flexbox-item flexbox-item-3">Item 3</div>
-                    <div class="flexbox-item flexbox-item-4">Item 4</div>
-                    <div class="flexbox-item flexbox-item-5">Item 5</div>
-                    <div class="flexbox-item flexbox-item-6">Item 6</div>
-                    <div class="flexbox-item flexbox-item-7">Item 7</div>
-                    <div class="flexbox-item flexbox-item-8">Item 8</div>
+                    <!-- forEach -->
                 </div>
             </div>
         </section>
@@ -127,10 +120,10 @@
                     <h1 style="color: #fff;">List 1</h1>
                 </div>
                 <div class="flexbox-content">
-                    <div class="flexbox-item flexbox-item-1">Item 1</div>
+                    <div class="flexbox-item flexbox-item-1">Item 1<span class="description"><h1>Description for item 1.</h1></span></div>
                     <div class="flexbox-item flexbox-item-2">Item 2</div>
-                    <div class="flexbox-item flexbox-item-3">Item 3</div>
-                    <div class="flexbox-item flexbox-item-4">Item 4</div>
+                    <div class="flexbox-item flexbox-item-3">Item 3</div>   
+                    <div class="flexbox-item flexbox-item-4">Item 4</div>   
                     <div class="flexbox-item flexbox-item-5">Item 5</div>
                     <div class="flexbox-item flexbox-item-6">Item 6</div>
                     <div class="flexbox-item flexbox-item-7">Item 7</div>
