--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -92,17 +92,22 @@
 
 <div class="page-content">
     <section>
-        <h1 style="margin-bottom: 20vh; margin-top: 1vh;">Kino Xp Projekt</h1>
+        <h1>Reserve Tickets</h1>
+        <h1>Movie name</h1>
+        <h1>Theater</h1>
+        <div style="width: 50%; height: 40%;"></div>
 
-        <div class="flexbox-container" id="list1-container" style="margin-bottom: -20vh;">
-            <div class="flexbox-title">
-                <h2 style="color: #fff;">Movie name</h2>
-                <h3 style="color: #fff;">Theater name</h3>
-            </div>
-            <div class="flexbox-content" >
-                <!-- forEach -->
-            </div>
-        </div>
+
+
+<!--        <div class="flexbox-container" id="list1-container" style="margin-bottom: -20vh;">-->
+<!--            <div class="flexbox-title">-->
+<!--                <h2 style="color: #fff;">Movie name</h2>-->
+<!--                <h3 style="color: #fff;">Theater name</h3>-->
+<!--            </div>-->
+<!--            <div class="flexbox-content" >-->
+<!--                &lt;!&ndash; forEach &ndash;&gt;-->
+<!--            </div>-->
+<!--        </div>-->
     </section>
 </div>
 
