seat reservation in progress 2

--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -95,7 +95,8 @@
         <h1>Reserve Tickets</h1>
         <h1>Movie name</h1>
         <h1>Theater</h1>
-        <div style="width: 50%; height: 40%;"></div>
+        <div style="width: 75%; height: 60%;border-color: black;border-width: 2px;border-style: solid"></div>
+        <input type="button" value="Next">
 
 
 
