--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -95,22 +95,18 @@
         <h1>Reserve Tickets</h1>
         <h1>Movie name</h1>
         <h1>Theater</h1>
-        <div style="width: 75%; height: 60%;border-color: black;border-width: 2px;border-style: solid"></div>
+        <div style="width: 75%; height: 60%;border-color: black;border-width: 2px;border-style: solid">
+            <div class="row" id="row1">
+<!--                <div class="seat" id="seat1"></div>-->
+<!--                <div class="seat"></div>-->
+<!--                <div class="seat"></div>-->
+            </div>
+        </div>
         <input type="button" value="Next">
-
-
-
-<!--        <div class="flexbox-container" id="list1-container" style="margin-bottom: -20vh;">-->
-<!--            <div class="flexbox-title">-->
-<!--                <h2 style="color: #fff;">Movie name</h2>-->
-<!--                <h3 style="color: #fff;">Theater name</h3>-->
-<!--            </div>-->
-<!--            <div class="flexbox-content" >-->
-<!--                &lt;!&ndash; forEach &ndash;&gt;-->
-<!--            </div>-->
-<!--        </div>-->
     </section>
 </div>
+
+
 
 
 
