--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -96,17 +96,26 @@
         <h1>Movie name</h1>
         <h1>Theater</h1>
         <div style="width: 75%; height: 60%;border-color: black;border-width: 2px;border-style: solid">
-            <div class="row" id="row1">
-<!--                <div class="seat" id="seat1"></div>-->
-<!--                <div class="seat"></div>-->
-<!--                <div class="seat"></div>-->
-            </div>
+            <table>
+                <tr>
+                    <th>test</th>
+                    <th>igen</th>
+                    <th>hest</th>
+                </tr>
+                <td>test</td>
+                <td>test</td>
+                <td>test</td>
+
+
+            </table>
+
+
+
         </div>
         <input type="button" value="Next">
+<script src="seatSelection.js"></script>
     </section>
 </div>
-
-
 
 
 
