seat reservation in progress

--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -95,22 +95,7 @@
         <h1>Reserve Tickets</h1>
         <h1>Movie name</h1>
         <h1>Theater</h1>
-        <div style="width: 75%; height: 60%;border-color: black;border-width: 2px;border-style: solid">
-            <table>
-                <tr>
-                    <th>test</th>
-                    <th>igen</th>
-                    <th>hest</th>
-                </tr>
-                <td>test</td>
-                <td>test</td>
-                <td>test</td>
-
-
-            </table>
-
-
-
+        <div id="seatDiv" style="width: 85%; height: 60%;border-color: black;border-width: 5px;border-style: solid">
         </div>
         <input type="button" value="Next">
 <script src="seatSelection.js"></script>
