JAVASCSRIPT POP UP INITI

--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -98,6 +98,11 @@
         <div id="seatDiv" style="width: 85%; height: 60%;border-color: black;border-width: 5px;border-style: solid">
         </div>
         <input type="button" value="Next">
+
+
+        <div class="popup" id="clickable">Click me!
+            <span class="popuptext" id="myPopup">Popup text...</span>
+        </div>
 <script src="seatSelection.js"></script>
     </section>
 </div>
