seat reservation in progress... seat selection and deselection works for both theatres

--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kino XP</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
 
 </head>
 <body>
@@ -43,7 +44,8 @@
                     <div class="content">
 
                         <div class="row">
-                            <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg" alt="">
+                            <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg"
+                                 alt="">
                         </div>
 
                         <div class="row">
@@ -90,25 +92,23 @@
 
 </nav>
 
-<div class="page-content">
+<div>
     <section>
-        <h1>Reserve Tickets</h1>
-        <h1>Movie name</h1>
-        <h1>Theater</h1>
-        <div id="seatDiv" style="width: 50%; height: 60%;border-color: black;border-width: 5px;border-style: solid">
-        </div>
+        <div id="info"class="seatInfoDiv">
+            <h1>Reserve Tickets</h1>
+            <h2>{Movie name}</h2>
+            <h2>{Theater}</h2></div>
+        <div id="seatDiv" class="seatDiv"></div>
         <input type="button" value="Next">
 
 
-        <div class="popup" id="clickable">Click me!
-            <span class="popuptext" id="myPopup">Popup text...</span>
-        </div>
-<script src="seatSelection.js"></script>
+        <!--        <div class="popup" id="clickable">Click me!-->
+        <!--            <span class="popuptext" id="myPopup">Popup text...</span>-->
+        <!--        </div>-->
+
     </section>
 </div>
 
-
-
-
+<script src="seatSelection.js"></script>
 </body>
 </html>
