--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -97,12 +97,8 @@
         <h1>Theater</h1>
         <div id="seatDiv" style="width: 50%; height: 60%;border-color: black;border-width: 5px;border-style: solid">
         </div>
-        <input type="button" value="Next">
+        <input type="button" value="Next" onclick="addPhoneNumber()"/>
 
-
-        <div class="popup" id="clickable">Click me!
-            <span class="popuptext" id="myPopup">Popup text...</span>
-        </div>
 <script src="seatSelection.js"></script>
     </section>
 </div>
