--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="about.html">Krav</a></li>
 
                 <li>
-                    <a href="#" class="desktop-item">Options</a>
+                    <a href="#" class="desktop-item">Operations</a>
                     <input type="checkbox" id="showDrop">
                     <label for="showDrop" class="mobile-item">Dropdown Menu</label>
                     <ul class="drop-menu">
@@ -35,6 +35,31 @@
                         <li><a href="#">Option</a></li>
                     </ul>
                 </li>
+
+                <li><a id="addMovieLink" href="#">Add Movie</a></li>
+
+                <div id="addMovieModal" class="modal">
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div id="addMovieCLose" class="closeAddMovieModal">&times;</div>
+                        <div class="login-form">
+                            <h2>Add Movie</h2>
+                            <div>
+                                <div>
+                                    <h3>Movie title</h3>
+                                    <input type="text" required>
+                                </div>
+                                <div>
+                                    <h3>Description</h3>
+                                    <input type="text" required>
+                                </div>
+                                <div>
+                                    <input type="submit" value="Add movie">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 
                 <!-- Mega Menu -->
                 <li>
