--- a/index.html
+++ b/index.html
@@ -94,25 +94,25 @@
                 <div id="myModal" class="modal">
                     <!-- Modal content -->
                     <div class="modal-content">
-                      <span class="close">&times;</span>
+                        <span class="close">&times;</span>
                         <div class="login-form">
-                            <h2>Sign In</h2> 
-                            <div> 
-                                <div> 
-                                   <h3>Username</h3> 
-                                 <input type="text" required> 
-                                </div> 
-                                <div> 
-                                   <h3>Password</h3> 
-                                 <input type="password" required>
-                                </div> 
-                                <div> <a href="#">Forgot Password</a> <a href="#">Signup</a> 
-                                </div> 
-                                <div> 
-                                 <input type="submit" value="Login"> 
-                                </div> 
-                            </div> 
-                        </div> 
+                            <h2>Sign In</h2>
+                            <div>
+                                <h3>Username</h3>
+                                <input type="text" id="username" required>
+                            </div>
+                            <div>
+                                <h3>Password</h3>
+                                <input type="password" id="password" required>
+                            </div>
+                            <div>
+                                <a href="#">Forgot Password</a> 
+                                <a href="#" id="signup-link">Signup</a>
+                            </div>
+                            <div>
+                                <input type="submit" value="Login" id="login-btn">
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -215,6 +215,7 @@
 
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="script.js"></script>
+    <script src="employeeLogin.js"></script>
 
 </body>
 
