added the calendar in index.html + small changes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
     
     <!-- Scripts -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" defer></script>
+    <!--<script src="https://kit.fontawesome.com/a076d05399.js" defer></script>-->
     <script src="script.js" defer></script>
-    <script src="movie_schedule/movie_schedule_script.js" defer></script>
+    <script src="movie_schedule/movie_schedule_script.js" type="module" defer></script>
 </head>
 
 <body>
