refactoring of Employee + login styling

--- a/employeeDashboard.html
+++ b/employeeDashboard.html
@@ -144,6 +144,7 @@
             <h1>Logged in as Operator</h1>
             <p>Employee ID: ${employeeData.employee_id}</p>
             <p>Is operator: ${employeeData.is_operator}</p>
+            <p>Name: ${employeeData.employee_name}</p>
             <!-- Add more properties as needed -->
         `;
     } else {
