--- a/index.html
+++ b/index.html
@@ -96,18 +96,14 @@
                     <div class="modal-content">
                         <span class="close">&times;</span>
                         <div class="login-form">
-                            <h2>Sign In</h2>
+                            <h1>Sign In</h1>
                             <div>
                                 <h3>Username</h3>
                                 <input type="text" id="username" required>
                             </div>
-                            <div>
+                            <div style="margin-bottom: 2vh;">
                                 <h3>Password</h3>
                                 <input type="password" id="password" required>
-                            </div>
-                            <div>
-                                <a href="#">Forgot Password</a> 
-                                <a href="#" id="signup-link">Signup</a>
                             </div>
                             <div>
                                 <input type="submit" value="Login" id="login-btn">
