JAVASCSRIPT cancel reservation pop up doesn't work (just took code from login button)

--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
                     <input type="checkbox" id="showDrop">
                     <label for="showDrop" class="mobile-item">Dropdown Menu</label>
                     <ul class="drop-menu">
-                        <li><a href="#">Option</a></li>
+<!--                        fixme WHY DOESN'T THE CANCEL RESERVATION BUTTON WORK???-->
+                        <li><a id="cancel-reservation" href="#">Cancel reservation</a></li>
                         <li><a href="#">Option</a></li>
                         <li><a href="#">Option</a></li>
                         <li><a href="#">Option</a></li>
                     </ul>
                 </li>
-                
+
+
                 <!-- Mega Menu -->
                 <li>
                     <a href="#" class="desktop-item">Mega Menu</a>
@@ -122,7 +124,45 @@
                             </div> 
                         </div> 
                     </div>
-                  
+
+<!--                    todo add cancel reservation-->
+
+                    <div id="myCancelModal" class="modal">
+
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                            <span class="close">&times;</span>
+
+                            <div class="login-form">
+
+                                <h2>Cancel reservation</h2>
+
+                                <div>
+                                    <div>
+                                        <h3>Phone Number</h3>
+                                        <input type="text" required>
+                                    </div>
+
+                                    <div>
+                                        <h3>Password</h3>
+                                        <input type="password" required>
+                                    </div>
+
+                                    <div> <a href="#">Forgot Password</a> <a href="#">Signup</a>
+                                    </div>
+
+                                    <div>
+                                        <input type="submit" value="Login">
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+
                   </div>
 
     <!-- Page Content -->
