--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -87,6 +87,42 @@
         </ul>
         <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
     </div>
+</nav>
+
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+
+        <div class="login-form">
+
+            <h2>Sign In</h2>
+
+            <div>
+                <div>
+                    <h3>Username</h3>
+                    <input type="text" required>
+                </div>
+
+                <div>
+                    <h3>Password</h3>
+                    <input type="password" required>
+                </div>
+
+                <div> <a href="#">Forgot Password</a> <a href="#">Signup</a>
+                </div>
+
+                <div>
+                    <input type="submit" value="Login">
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
 
 </nav>
 
@@ -98,10 +134,62 @@
             <h2>{Movie name}</h2>
             <h2>{Theater}</h2></div>
         <div id="seatDiv" class="seatDiv"></div>
-        <input type="button" value="Next" onclick="addPhoneNumber()"/>
+
+
+
+<!--WHAT CLASS/ID SHOULD BE HERE?? THE BUTTON LOOKS LIKE SHEIT-->
+<div>
+    <ul class="nav-links">
+<!--        <label for="close-btn" class="btn close-btn"><i class="fas fa-times"></i></label>-->
+        <li><a class="addPhoneNumberbtn" id="add-phone-link" href="#">Next</a></li>
+        </ul>
+</div>
+    </section>
+</div>
+
+
+<div id="myNextButton" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+
+        <div class="login-form">
+
+            <h2>Please add your phone number</h2>
+
+            <div>
+                <form action="index.html" method="get">
+                <div>
+                    <h3>Phone number</h3>
+                    <input type="text" id="phoneNumber" required>
+<!--                    todo HOW DO WE TRANSFER THIS PHONE NUMBER DATA TO THE DATABASE ALONG WITH SEATS??-->
+                </div>
+
+<!--                <div>-->
+<!--                    <h3>Password</h3>-->
+<!--                    <input type="password" required>-->
+<!--                </div>-->
+
+<!--                <div> <a href="#">Forgot Password</a> <a href="#">Signup</a>-->
+<!--                </div>-->
+
+                <div>
+                    <input type="submit" value="Confirm reservation">
+                </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+
+
+
 
 <script src="seatSelection.js"></script>
-    </section>
 </div>
 
 <script src="seatSelection.js"></script>
