Fixing commit editor elements...

--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
     <!--<script src="https://kit.fontawesome.com/a076d05399.js" defer></script>-->
     <script src="script.js" defer></script>
     <script src="movie_schedule/movie_schedule_script.js" type="module" defer></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" defer></script>
+    <script src="script.js" defer></script>
+    <script src="employeeLogin.js"defer></script>
 </head>
 
 <body>
-<nav>
+    <nav>
     <div class="wrapper">
         <div class="logo"><a href="#">Kino XP</a></div>
         <input type="checkbox" id="menu-btn">
@@ -120,29 +123,28 @@
             <label for="menu-btn" class="btn menu-btn"><i class="fas fa-bars"></i></label>
         </div>
     </nav>
-                
-<<<<<<< HEAD
-                <div id="myModal" class="modal">
-                    <!-- Modal content -->
-                    <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <div class="login-form">
-                            <h1>Sign In</h1>
-                            <div>
-                                <h3>Username</h3>
-                                <input type="text" id="username" required>
-                            </div>
-                            <div style="margin-bottom: 2vh;">
-                                <h3>Password</h3>
-                                <input type="password" id="password" required>
-                            </div>
-                            <div>
-                                <input type="submit" value="Login" id="login-btn">
-                            </div>
-                        </div>
-                    </div>
+
+    <!-- modals -->
+    <div id="myModal" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="login-form">
+                <h1>Sign In</h1>
+                <div>
+                    <h3>Username</h3>
+                    <input type="text" id="username" required>
                 </div>
-=======
+                <div style="margin-bottom: 2vh;">
+                    <h3>Password</h3>
+                    <input type="password" id="password" required>
+                </div>
+                <div>
+                    <input type="submit" value="Login" id="login-btn">
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="myModal" class="modal">
         <!-- Modal content -->
         <div class="modal-content">
@@ -167,8 +169,6 @@
             </div> 
         </div>
     </div>
->>>>>>> d65f341ad4baac1e6fdcc6c763cc55ddabf076f1
-
     <div id="movieModal" class="modal">
         <div class="modal-content-movie">
             <span class="close">&times;</span>
@@ -201,12 +201,11 @@
         </div>
     </div>
 
-<!-- Page Content -->
-
+    <!-- Page Content -->
     <div class="page-content">
+        <!-- Header Section -->
         <section>
             <h1 style="margin-bottom: 20vh;">Kino Xp Projekt</h1>
-            
             <div class="flexbox-container" id="list1-container" style="margin-bottom: -30vh;">
                 <div class="flexbox-title">
                     <h1 style="color: #fff;">Popular Movies</h1>
@@ -259,30 +258,15 @@
                 <div class="flexbox-item flexbox-item-7">Item 7</div>
                 <div class="flexbox-item flexbox-item-8">Item 8</div>
             </div>
-
         </div>
-
     </section>
 
     <section>
         <h1>Ny section (Evt vælg biograf)</h1>
-
         <div class="flexbox-content" id="list3-container">
             <div class="flexbox-big-item">Sal 1</div>
             <div class="flexbox-big-item">Sal 2</div>
         </div>
     </section>
-
-<<<<<<< HEAD
-    </div>
-
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <script src="script.js"></script>
-    <script src="employeeLogin.js"></script>
-=======
->>>>>>> d65f341ad4baac1e6fdcc6c763cc55ddabf076f1
-
-    </div>
 </body>
-
 </html>
