--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -95,15 +95,25 @@
 
         <div id="info"class="seatInfoDiv">
             <h1>Reserve Tickets</h1>
-            <h2>{Movie name}</h2>
-            <h2>{Theater}</h2></div>
-        <div id="seatDiv" class="seatDiv"></div>
+            <h2 id="movieName">{Movie name}</h2>
+            <h2 id="theaterName">{Theater}</h2>
+            <div class="canvasBlock"></div>
+        </div>
+
+        <div id="seatDiv" class="seatDiv">
+
+        </div>
+        <div class="selectedSeatInfoDiv">
+            <h1>Selected seats...</h1>
+            <h1>seat 1  {price}</h1>
+            <h1>seat 2  {price}</h1>
+            <h1>total price...</h1>
+        </div>
         <input type="button" value="Next" onclick="addPhoneNumber()"/>
 
 <script src="seatSelection.js"></script>
     </section>
 </div>
 
-<script src="seatSelection.js"></script>
 </body>
 </html>
