added more to reserveSeats and style.css

--- a/reserveSeats.html
+++ b/reserveSeats.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kino XP</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
 
 </head>
 <body>
@@ -43,7 +44,8 @@
                     <div class="content">
 
                         <div class="row">
-                            <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg" alt="">
+                            <img src="https://fadzrinmadu.github.io/hosted-assets/responsive-mega-menu-and-dropdown-menu-using-only-html-and-css/img.jpg"
+                                 alt="">
                         </div>
 
                         <div class="row">
@@ -93,7 +95,7 @@
 <div>
     <section>
 
-        <div id="info"class="seatInfoDiv">
+        <div id="info" class="seatInfoDiv">
             <h1>Reserve Tickets</h1>
             <h2 id="movieName">{Movie name}</h2>
             <h2 id="theaterName">{Theater}</h2>
@@ -105,14 +107,14 @@
         </div>
         <div class="selectedSeatInfoDiv">
             <h1>Selected seats...</h1>
-            <h1>seat 1  {price}</h1>
-            <h1>seat 2  {price}</h1>
+            <h1>seat 1 {price}</h1>
+            <h1>seat 2 {price}</h1>
             <h1>total price...</h1>
         </div>
         <input type="button" value="Next" onclick="addPhoneNumber()"/>
 
-<script src="seatSelection.js"></script>
-    </section>
+        <script src="seatSelection.js"></script>
+            </section>
 </div>
 
 </body>
