added new HTML directory

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!-- <li><a href="#">Home</a></li> -->
 
 
-            <li><a href="about.html">Krav</a></li>
+            <li><a href="html/about.html">Krav</a></li>
 
             <li>
                 <a href="#" class="desktop-item">Operations</a>
@@ -44,7 +44,7 @@
                 </ul>
             </li>
 
-            <li><a href="addMovie.html">Add Movie</a></li>
+            <li><a href="html/addMovie.html">Add Movie</a></li>
 
             <div id="addMovieModal" class="modal">
                 <div class="modal-content">
