--- a/html/addMovie.html
+++ b/html/addMovie.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Add movie page</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
 <nav id="addMovieNav" style="display: flex; margin-bottom: 25px;">
-    <a href="index.html" style="text-decoration: none; color: inherit;">
+    <a href="../index.html" style="text-decoration: none; color: inherit;">
         <h1 style="font-size: 45px; padding: 10px 15px 10px 15px; text-transform: capitalize;">
             Add Movie</h1>
     </a>
