--- a/html/errorPage.html
+++ b/html/errorPage.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Error</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap">
 </head>
 
@@ -33,7 +33,7 @@
 <div class="error-container">
   <h1>We apologize for the inconvenience, but it seems that an error has occurred during your interaction.</h1>
   <h2>Please reach out to the developers for assistance with this issue.</h2>
-  <img src="images/000-http-error-codes.png" alt="Error Image">
+  <img src="../images/000-http-error-codes.png" alt="Error Image">
 </div>
 
 
