--- a/html/addMovie.html
+++ b/html/addMovie.html
@@ -29,7 +29,7 @@
         <div>
             <label class="addMovieLabel">Enter movie desc.: </label>
             <textarea class="addMovieDescription" name="movieDescription" rows="4" cols="50"
-                      placeholder="Enter here..." required></textarea>
+                      placeholder="Write your description here..." required></textarea>
         </div>
 
         <div>
@@ -124,7 +124,7 @@
     });
 
     function goToIndex() {
-        window.location.href = 'index.html';
+        window.location.href = '../index.html';
     }
 </script>
 
