--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="html/about.html">Krav</a></li>
 
             <li>
-                <a href="#" class="desktop-item">Operations</a>
+                <a href="#" class="desktop-item">SletMigGerne</a>
                 <input type="checkbox" id="showDrop">
                 <label for="showDrop" class="mobile-item">Dropdown Menu</label>
                 <ul class="drop-menu">
@@ -44,29 +44,14 @@
                 </ul>
             </li>
 
-            <li><a href="html/addMovie.html">Add Movie</a></li>
-
-            <div id="addMovieModal" class="modal">
-                <div class="modal-content">
-                    <div id="addMovieClose" class="close">&times;</div>
-                    <form id="addMovieForm">
-                        <h2>Add Movie</h2>
-                        <div>
-                            <div>
-                                <h3>Movie title</h3>
-                                <input type="text" placeholder="Indtast filmtitel" required>
-                            </div>
-                            <div>
-                                <h3>Description</h3>
-                                <input type="text" required>
-                            </div>
-                            <div>
-                                <input type="submit" value="Add movie">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
+            <li><a href="">Movie Operations</a>
+                <input type="checkbox">
+                <label for="showDrop" class="mobile-item">Dropdown Menu</label>
+                <ul class="drop-menu">
+                    <li><a href="html/addMovie.html">Add New Movie</a></li>
+                    <li><a href="#">Edit Movie</a></li>
+                </ul>
+            </li>
 
             <!-- Mega Menu -->
             <li>
