final touches before merging

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
     <section class="popular-movies-section">
         <div class="popular-movies-title">
-            <h1>Popular movies</h1>
+            <h1 class="popular-movies-title">Popular movies</h1>
         </div>
         <div class="popular-movies-content">
             <!-- forEach -->
