--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <label for="showDrop" class="mobile-item">Dropdown Menu</label>
                 <ul class="drop-menu">
                     <li><a href="html/addMovie.html">Add New Movie</a></li>
-                    <li><a href="#">Edit Movie</a></li>
+                    <li><a href="html/editMovie.html">Edit Movie</a></li>
                 </ul>
             </li>
 
