--- a/public/index.html
+++ b/public/index.html
@@ -219,10 +219,10 @@
                     <div class="movie-description">
                         <p id="modalDescription"></p>
                     </div>
-                    <div class="movie-booking">
+                    <!--<div class="movie-booking">
                         <p style="margin-right: 10px;">Next showing: ?</p>
                         <button id="modalBooking">Reserve Seats</button>
-                    </div>
+                    </div>-->
                     <div class="movie-trailer">
                         <iframe id="modalTrailer" width="640" height="360" frameborder="0" allowfullscreen allow="autoplay"></iframe></iframe>
                     </div>
@@ -234,7 +234,7 @@
 
     <section class="popular-movies-section">
         <div class="popular-movies-title">
-            <h1 class="popular-movies-title">Popular movies</h1>
+            <h1 class="popular-movies-title">Current movies</h1>
         </div>
         <div class="popular-movies-content">
             <!-- forEach -->
